--- a/examples/global.css
+++ b/examples/global.css
@@ -11,7 +11,7 @@ body {
   font-weight: 400;
   font-style: normal;
   padding: 0;
-  margin: 0;
+  margin: 1rem;
 
   font-size: 2rem;
   color: #fff;
